Renamed Spigot references to Bukkit.